--- a/public/main.html
+++ b/public/main.html
@@ -1,40 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>WTW</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.min.css">
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body>
     <div class="visually-hidden">
-      <!-- inject:svg --><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><symbol id="add" viewBox="0 0 19 20">
-    <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
-    <title>+</title>
-    <desc>Created with Sketch.</desc>
-    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <polygon id="+" fill="#EEE5B5" points="10.777832 11.2880859 10.777832 19.5527344 8.41650391 19.5527344 8.41650391 11.2880859 0.627929688 11.2880859 0.627929688 8.92675781 8.41650391 8.92675781 8.41650391 0.662109375 10.777832 0.662109375 10.777832 8.92675781 18.5664062 8.92675781 18.5664062 11.2880859"/>
-    </g>
-</symbol><symbol id="full-screen" viewBox="0 0 27 27">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M23.8571 0H16V3.14286H23.8571V11H27V3.14286V0H23.8571Z" fill="#FFF9D9" fill-opacity="0.7"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M27 23.8571V16H23.8571V23.8571H16V27H23.8571H27L27 23.8571Z" fill="#FFF9D9" fill-opacity="0.7"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M0 3.14286L0 11H3.14286L3.14286 3.14286L11 3.14286V0H3.14286H0L0 3.14286Z" fill="#FFF9D9" fill-opacity="0.7"/>
-<path fill-rule="evenodd" clip-rule="evenodd" d="M3.14286 27H11V23.8571H3.14286L3.14286 16H0L0 23.8571V27H3.14286Z" fill="#FFF9D9" fill-opacity="0.7"/>
-</symbol><symbol id="in-list" viewBox="0 0 18 14">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M2.40513 5.35353L6.1818 8.90902L15.5807 0L18 2.80485L6.18935 14L0 8.17346L2.40513 5.35353Z" fill="#EEE5B5"/>
-</symbol><symbol id="pause" viewBox="0 0 14 21">
-    <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
-    <title>Artboard</title>
-    <desc>Created with Sketch.</desc>
-    <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <polygon id="Line" fill="#EEE5B5" fill-rule="nonzero" points="0 -1.11910481e-13 4 -1.11910481e-13 4 21 0 21"/>
-        <polygon id="Line" fill="#EEE5B5" fill-rule="nonzero" points="10 -1.11910481e-13 14 -1.11910481e-13 14 21 10 21"/>
-    </g>
-</symbol><symbol id="play-s" viewBox="0 0 19 19">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M0 0L19 9.5L0 19V0Z" fill="#EEE5B5"/>
-</symbol></svg><!-- endinject -->
+      <!-- inject:svg --><svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+      >
+        <symbol id="add" viewBox="0 0 19 20">
+          <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+          <title>+</title>
+          <desc>Created with Sketch.</desc>
+          <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <polygon
+              id="+"
+              fill="#EEE5B5"
+              points="10.777832 11.2880859 10.777832 19.5527344 8.41650391 19.5527344 8.41650391 11.2880859 0.627929688 11.2880859 0.627929688 8.92675781 8.41650391 8.92675781 8.41650391 0.662109375 10.777832 0.662109375 10.777832 8.92675781 18.5664062 8.92675781 18.5664062 11.2880859"
+            />
+          </g>
+        </symbol>
+        <symbol id="full-screen" viewBox="0 0 27 27">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M23.8571 0H16V3.14286H23.8571V11H27V3.14286V0H23.8571Z"
+            fill="#FFF9D9"
+            fill-opacity="0.7"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M27 23.8571V16H23.8571V23.8571H16V27H23.8571H27L27 23.8571Z"
+            fill="#FFF9D9"
+            fill-opacity="0.7"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M0 3.14286L0 11H3.14286L3.14286 3.14286L11 3.14286V0H3.14286H0L0 3.14286Z"
+            fill="#FFF9D9"
+            fill-opacity="0.7"
+          />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M3.14286 27H11V23.8571H3.14286L3.14286 16H0L0 23.8571V27H3.14286Z"
+            fill="#FFF9D9"
+            fill-opacity="0.7"
+          />
+        </symbol>
+        <symbol id="in-list" viewBox="0 0 18 14">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M2.40513 5.35353L6.1818 8.90902L15.5807 0L18 2.80485L6.18935 14L0 8.17346L2.40513 5.35353Z"
+            fill="#EEE5B5"
+          />
+        </symbol>
+        <symbol id="pause" viewBox="0 0 14 21">
+          <!-- Generator: Sketch 52.2 (67145) - http://www.bohemiancoding.com/sketch -->
+          <title>Artboard</title>
+          <desc>Created with Sketch.</desc>
+          <g id="Artboard" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+            <polygon
+              id="Line"
+              fill="#EEE5B5"
+              fill-rule="nonzero"
+              points="0 -1.11910481e-13 4 -1.11910481e-13 4 21 0 21"
+            />
+            <polygon
+              id="Line"
+              fill="#EEE5B5"
+              fill-rule="nonzero"
+              points="10 -1.11910481e-13 14 -1.11910481e-13 14 21 10 21"
+            />
+          </g>
+        </symbol>
+        <symbol id="play-s" viewBox="0 0 19 19">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0L19 9.5L0 19V0Z" fill="#EEE5B5" />
+        </symbol></svg
+      ><!-- endinject -->
     </div>
 
     <section class="movie-card">
@@ -63,7 +115,12 @@
       <div class="movie-card__wrap">
         <div class="movie-card__info">
           <div class="movie-card__poster">
-            <img src="img/the-grand-budapest-hotel-poster.jpg" alt="The Grand Budapest Hotel poster" width="218" height="327" />
+            <img
+              src="img/the-grand-budapest-hotel-poster.jpg"
+              alt="The Grand Budapest Hotel poster"
+              width="218"
+              height="327"
+            />
           </div>
 
           <div class="movie-card__desc">
@@ -74,7 +131,7 @@
             </p>
 
             <div class="movie-card__buttons">
-             <button class="btn btn--play movie-card__button" type="button">
+              <button class="btn btn--play movie-card__button" type="button">
                 <svg viewBox="0 0 19 19" width="19" height="19">
                   <use xlink:href="#play-s"></use>
                 </svg>
@@ -133,17 +190,29 @@
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/fantastic-beasts-the-crimes-of-grindelwald.jpg" alt="Fantastic Beasts: The Crimes of Grindelwald" width="280" height="175" />
+              <img
+                src="img/fantastic-beasts-the-crimes-of-grindelwald.jpg"
+                alt="Fantastic Beasts: The Crimes of Grindelwald"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
-              <a class="small-movie-card__link" href="movie-page.html">Fantastic Beasts: The Crimes of Grindelwald</a>
+              <a class="small-movie-card__link" href="movie-page.html"
+                >Fantastic Beasts: The Crimes of Grindelwald</a
+              >
             </h3>
           </article>
 
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/bohemian-rhapsody.jpg" alt="Bohemian Rhapsody" width="280" height="175" />
+              <img
+                src="img/bohemian-rhapsody.jpg"
+                alt="Bohemian Rhapsody"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">Bohemian Rhapsody</a>
@@ -170,21 +239,32 @@
             </h3>
           </article>
 
-
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/we-need-to-talk-about-kevin.jpg" alt="We need to talk about Kevin" width="280" height="175" />
+              <img
+                src="img/we-need-to-talk-about-kevin.jpg"
+                alt="We need to talk about Kevin"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
-              <a class="small-movie-card__link" href="movie-page.html">We need to talk about Kevin</a>
+              <a class="small-movie-card__link" href="movie-page.html"
+                >We need to talk about Kevin</a
+              >
             </h3>
           </article>
 
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/what-we-do-in-the-shadows.jpg" alt="What We Do in the Shadows" width="280" height="175" />
+              <img
+                src="img/what-we-do-in-the-shadows.jpg"
+                alt="What We Do in the Shadows"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">What We Do in the Shadows</a>
@@ -211,7 +291,6 @@
             </h3>
           </article>
 
-
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
@@ -235,7 +314,12 @@
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/no-country-for-old-men.jpg" alt="No Country for Old Men" width="280" height="175" />
+              <img
+                src="img/no-country-for-old-men.jpg"
+                alt="No Country for Old Men"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">No Country for Old Men</a>
@@ -252,12 +336,10 @@
             </h3>
           </article>
 
-
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
               <img src="img/moonrise-kingdom.jpg" alt="Moonrise Kingdom" width="280" height="175" />
-
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">Moonrise Kingdom</a>
@@ -267,7 +349,12 @@
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/seven-years-in-tibet.jpg" alt="Seven Years in Tibet" width="280" height="175" />
+              <img
+                src="img/seven-years-in-tibet.jpg"
+                alt="Seven Years in Tibet"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">Seven Years in Tibet</a>
@@ -287,18 +374,27 @@
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/war-of-the-worlds.jpg" alt="War of the Worlds" width="280" height="175" />
+              <img
+                src="img/war-of-the-worlds.jpg"
+                alt="War of the Worlds"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">War of the Worlds</a>
             </h3>
           </article>
 
-
           <article class="small-movie-card catalog__movies-card">
             <button class="small-movie-card__play-btn" type="button">Play</button>
             <div class="small-movie-card__image">
-              <img src="img/dardjeeling-limited.jpg" alt="Dardjeeling Limited" width="280" height="175" />
+              <img
+                src="img/dardjeeling-limited.jpg"
+                alt="Dardjeeling Limited"
+                width="280"
+                height="175"
+              />
             </div>
             <h3 class="small-movie-card__title">
               <a class="small-movie-card__link" href="movie-page.html">Dardjeeling Limited</a>
