--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/css/style.min.css" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
